Session11 - Filters, JSP, Hibernate Intro

--- a/Session11/WebContent/login.html
+++ b/Session11/WebContent/login.html
@@ -11,7 +11,7 @@
 		
 		<br/>
 		
-		<form action="Awesome" method="post">
+		<form action="login.jsp" method="post">
 			Enter Your Email: <input type="text" name="txtEmail" placeholder="eg: john@example.com"/>
 			<br/>
 			Enter Your Password: <input type="password" name="txtPassword" placeholder="Min. 6 characters"/>
