--- a/Session11/WebContent/register.html
+++ b/Session11/WebContent/register.html
@@ -2,22 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Login Here</title>
+<title>Register Here</title>
 </head>
 <body>
 	<br/><br/>
 	<center>
-		<h3>Welcome, Enter Your Details to Login</h3>
+		<h3>Welcome, Enter Your Details to Register</h3>
 		
 		<br/>
 		
-		<form action="Awesome" method="post">
+		<form action="register.jsp" method="post">
+			Enter Your Name: <input type="text" name="txtName" placeholder="eg: John Watson"/>
+			<br/>
 			Enter Your Email: <input type="text" name="txtEmail" placeholder="eg: john@example.com"/>
 			<br/>
 			Enter Your Password: <input type="password" name="txtPassword" placeholder="Min. 6 characters"/>
 			<br/>
-			<input type="hidden" value="login" name="txtType"/>
-			<input type="submit" value="Login Me"/>
+			<input type="hidden" value="register" name="txtType"/>
+			<input type="submit" value="Register Me"/>
 		</form>
 		
 	</center>
